--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '8'
-          distribution: 'oracle'
+          distribution: 'dragonwell'
       - name: Packaging
         run: |
           mvn package -f ja-netfilter/pom.xml
