--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -4,7 +4,7 @@ on:
     - cron: "0 */24 * * *"
   workflow_dispatch:
 jobs:
-  ja-netfilter-nightly-build:
+  config:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -18,6 +18,11 @@ jobs:
         run: |
           git submodule init
           git submodule update
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs:
+    steps:
       - name: Set Up JDK8
         uses: actions/setup-java@v4
         with:
@@ -35,6 +40,12 @@ jobs:
       - name: Packaging plugin-url
         run: |
           mvn package -f plugin-url/pom.xml
+  release:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: write
+    steps:
       - name: Stage Artifacts
         run: |
           mkdir staging
