--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -19,9 +19,9 @@ jobs:
           git submodule init
           git submodule update
   build:
+    needs: config
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs:
     steps:
       - name: Set Up JDK8
         uses: actions/setup-java@v4
@@ -41,6 +41,7 @@ jobs:
         run: |
           mvn package -f plugin-url/pom.xml
   release:
+    needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
     permissions:
