--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -51,4 +51,4 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create "$(date -I)" --notes "nightly build" ja-netfilter.tar.bz2
+          gh release create "$(date -I).$(uuidgen -t)" --notes "nightly build" ja-netfilter.tar.bz2
