--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -59,4 +59,4 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create "$(date -I).$(uuidgen -t)" --notes "nightly build" ja-netfilter.tar.bz2
+          gh release create "$(date -I).$(uuidgen -t)" --notes "nightly build" staging/ja-netfilter.tar.bz2
