--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -42,19 +42,16 @@ jobs:
           plugins: plugin-dns plugin-power plugin-url
           targets: dbeaver jetbrains
         run: |
-          mkdir -p staging/ja-netfilter/plugins
-          mkdir -p staging/ja-netfilter/plugins-dbeaver
-          mkdir -p staging/ja-netfilter/plugins-jetbrains
           cp ja-netfilter/target/*-jar-with-dependencies.jar staging/ja-netfilter
+          mkdir -p staging/ja-netfilter/plugins          
           for plugin in ${{env.plugins}};do
             cp ${plugin}/target/*-jar-with-dependencies.jar staging/ja-netfilter/plugins
           done
           for target in ${{env.targets}};do
-            cp -r .github/config-${target} staging/ja-netfilter
             ln -s staging/ja-netfilter/plugins staging/ja-netfilter/plugins-${target}
+            cp -r .github/config-${target} staging/ja-netfilter
           done
-          cd staging
-          ls -lh
+          cd staging && ls -lh
           tar -cvf ja-netfilter.tar ja-netfilter && bzip2 ja-netfilter.tar
       - name: Create Release
         env:
