--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -48,9 +48,9 @@ jobs:
             cp ${plugin}/target/*-jar-with-dependencies.jar staging/ja-netfilter/plugins
           done
           for target in ${{env.targets}};do
-            cd staging
-            ln -s ja-netfilter/plugins ja-netfilter/plugins-${target}
-            cd ..
+            cd staging/ja-netfilter
+            ln -s plugins plugins-${target}
+            cd ../..
             cp -r .github/config-${target} staging/ja-netfilter
           done
           cd staging && ls -lh
