--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -23,8 +23,8 @@ jobs:
       - name: Set Up JDK8
         uses: actions/setup-java@v4
         with:
-          java-version: '8'
-          distribution: 'dragonwell'
+          java-version: 8
+          distribution: dragonwell
       - name: Packaging ja-netfilter
         run: |
           mvn package -f ja-netfilter/pom.xml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.9
+          python-version: 3.12
       - name: Get Licenses
         run: |
           python get_jb_licenses.py
