--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -4,6 +4,7 @@ on:
     - cron: "0 */24 * * *"
   workflow_dispatch:
 jobs:
+  
   nightly-build:
     permissions:
       contents: write
@@ -43,6 +44,8 @@ jobs:
           python-version: 3.12
       - name: Get Licenses
         run: |
+          pip install requests==2.32.3
+          pip install lxml==5.3.0
           python get_jb_licenses.py
       - name: Stage Artifacts
         env:
