--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -43,8 +43,8 @@ jobs:
           python-version: 3.12
       - name: Get Licenses
         run: |
-          pip install -r scripts/requirements.txt
-          python scripts/get_jb_licenses.py
+          pip install -r .github/requirements.txt
+          python .github/get_jb_licenses.py
       - name: Stage Artifacts
         env:
           plugins: plugin-dns plugin-power plugin-url
