--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          tree
+          tree -a
       - name: Update Submodules
         run: |
           git submodule init
@@ -46,6 +46,7 @@ jobs:
         run: |
           pip install -r .github/requirements.txt
           python .github/get_jb_licenses.py
+          tree .github
       - name: Stage Artifacts
         env:
           plugins: plugin-dns plugin-power plugin-url
