--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -48,8 +48,8 @@ jobs:
       - name: Stage Artifacts
         env:
           plugins: plugin-dns plugin-power plugin-url
-#          targets: jetbrains
-          targets: jetbrains dbeaver
+          targets: jetbrains
+#          targets: jetbrains dbeaver
         run: |
           mkdir -p staging/ja-netfilter/plugins
           cp -r src/* staging/ja-netfilter
