--- a/.github/workflows/ja-netfilter-nightly-build.yaml
+++ b/.github/workflows/ja-netfilter-nightly-build.yaml
@@ -47,7 +47,7 @@ jobs:
           python .github/get_jb_licenses.py
       - name: Stage Artifacts
         env:
-          plugins: plugin-dns plugin-power plugin-url plugin-env plugin-hideme
+          plugins: plugin-dns plugin-dump plugin-env plugin-hideme plugin-native plugin-power plugin-url
           targets: jetbrains
 #          targets: jetbrains dbeaver
         run: |
